# datalabeler

./: .dockerignore  .gitignore  DEV.md  README.md  pyproject.toml
config/: pipeline.example.yaml  pipeline.yaml
docker/: .env.example  Dockerfile.extract  Dockerfile.sam3  _env.sh  build.sh  cvat.sh  docker-compose.yml  join.sh  start.sh  stop.sh
scripts/: smoke_sam3.py
src/datalabeler/: __init__.py  cli.py  coco.py  config.py  imageio.py
src/datalabeler/stages/: autolabel.py  cvat.py  extract.py  preview.py
src/datalabeller/: cli.py  coco.py  config.py  ids.py  manifest.py
src/datalabeller/stages/: autolabel.py  cvat.py  extract.py  package.py
tests/: test_pipeline.py
